@@ -1,0 +1,13 @@
+# $NetBSD: Makefile,v 1.1 2019/08/13 02:25:05 brook Exp $
+
+DISTNAME=	nfssext-cfr
+PKGNAME=	tex-${DISTNAME}-2019
+TEXLIVE_REV=	43640
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/nfssext-cfr
+COMMENT=	Extensions to the LaTeX NFSS
+LICENSE=	lppl-1.3c
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
