@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2019/08/13 02:25:05 brook Exp $
+share/texmf-dist/tex/latex/nfssext-cfr/nfssext-cfr.sty
