@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/13 02:25:05 brook Exp $
+
+SHA1 (tex-nfssext-cfr-43640/nfssext-cfr.tar.xz) = 5e47c99ff0f6f7672f03d56673a9a546eef4dfe7
+RMD160 (tex-nfssext-cfr-43640/nfssext-cfr.tar.xz) = 526b41790aaa00c7ab736438781141a2305f3a43
+SHA512 (tex-nfssext-cfr-43640/nfssext-cfr.tar.xz) = 5083d4ff4168b857a7391855ce02ea354cb17a26242a3e3b2693d6bbb35f722f750299669a37afbb99a52180433d697fbf65a6fb6afd6bd58d4b16c63e5b0d67
+Size (tex-nfssext-cfr-43640/nfssext-cfr.tar.xz) = 5276 bytes
